--- a/django-models/LibraryProject/relationship_app/templates/library_detail.html
+++ b/django-models/LibraryProject/relationship_app/templates/library_detail.html
@@ -1,4 +1,3 @@
-<!-- library_detail.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -11,7 +10,10 @@
     <ul>
         {% for book in library.books.all %}
         <li>{{ book.title }} by {{ book.author.name }} (Published {{ book.publication_year }})</li>
+        {% empty %}
+        <li>No books available in this library.</li>
         {% endfor %}
     </ul>
 </body>
 </html>
+
