--- a/django-models/LibraryProject/relationship_app/templates/library_detail.html
+++ b/django-models/LibraryProject/relationship_app/templates/library_detail.html
@@ -1,3 +1,4 @@
+<!-- library_detail.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -10,10 +11,7 @@
     <ul>
         {% for book in library.books.all %}
         <li>{{ book.title }} by {{ book.author.name }} (Published {{ book.publication_year }})</li>
-        {% empty %}
-        <li>No books available in this library.</li>
         {% endfor %}
     </ul>
 </body>
 </html>
-
