--- a/django-models/LibraryProject/relationship_app/templates/list_books.html
+++ b/django-models/LibraryProject/relationship_app/templates/list_books.html
@@ -1,3 +1,4 @@
+<!-- list_books.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -9,10 +10,7 @@
     <ul>
         {% for book in books %}
         <li>{{ book.title }} by {{ book.author.name }}</li>
-        {% empty %}
-        <li>No books available.</li>
         {% endfor %}
     </ul>
 </body>
 </html>
-
