--- a/django_blog/blog/templates/blog/post_detail.html
+++ b/django_blog/blog/templates/blog/post_detail.html
@@ -19,3 +19,29 @@
   </article>
 {% endblock %}
 
+<h3>Comments</h3>
+
+{% for comment in post.comments.all %}
+    <div class="comment">
+        <p><strong>{{ comment.author }}</strong> • {{ comment.created_at }}</p>
+        <p>{{ comment.content }}</p>
+
+        {% if user == comment.author %}
+            <a href="{% url 'comment-update' comment.pk %}">Edit</a> •
+            <a href="{% url 'comment-delete' comment.pk %}">Delete</a>
+        {% endif %}
+    </div>
+{% empty %}
+    <p>No comments yet.</p>
+{% endfor %}
+
+{% if user.is_authenticated %}
+    <form method="POST" action="{% url 'comment-add' post.id %}">
+        {% csrf_token %}
+        {{ comment_form.as_p }}
+        <button type="submit">Add Comment</button>
+    </form>
+{% else %}
+    <p>You must <a href="{% url 'login' %}">login</a> to comment.</p>
+{% endif %}
+
