4. Implementing Advanced Features: Tagging and Search Functionality

--- a/django_blog/blog/templates/blog/base.html
+++ b/django_blog/blog/templates/blog/base.html
@@ -38,3 +38,8 @@
 </body>
 </html>
 
+<form action="{% url 'search-posts' %}" method="get" class="inline-block">
+  <input name="q" type="search" placeholder="Search posts or tags..." value="{{ request.GET.q|default:'' }}" class="px-2 py-1 border rounded" />
+  <button type="submit" class="px-3 py-1 bg-blue-600 text-white rounded">Search</button>
+</form>
+
