--- a/django_blog/blog/templates/blog/post_list.html
+++ b/django_blog/blog/templates/blog/post_list.html
@@ -36,3 +36,10 @@
   {% endif %}
 {% endblock %}
 
+<div class="mt-2">
+  {% for tag in post.tags.all %}
+    <a href="{% url 'posts-by-tag' tag.name %}" class="text-sm bg-gray-100 px-2 py-1 rounded mr-2">#{{ tag.name }}</a>
+  {% empty %}
+    <span class="text-gray-400">No tags</span>
+  {% endfor %}
+</div>
