--- a/django_blog/blog/templates/blog/post_detail.html
+++ b/django_blog/blog/templates/blog/post_detail.html
@@ -45,3 +45,10 @@
     <p>You must <a href="{% url 'login' %}">login</a> to comment.</p>
 {% endif %}
 
+<div class="mt-2">
+  {% for tag in post.tags.all %}
+    <a href="{% url 'posts-by-tag' tag.name %}" class="text-sm bg-gray-100 px-2 py-1 rounded mr-2">#{{ tag.name }}</a>
+  {% empty %}
+    <span class="text-gray-400">No tags</span>
+  {% endfor %}
+</div>
